# fujinet-platformio

./: .gitignore
build-platforms/: platformio-fujinet-atari16bit-rev0.ini
data/webui/config/: fujinet-atari16bit-rev0.yaml
include/: pinmap.h
include/pinmap/: atari16bit_rev0.h
lib/FileSystem/: fnFsSD.cpp
lib/bus/: bus.h
lib/bus/acsi/: acsi.c  acsi.cpp  acsi.h
lib/config/: fnc_load.cpp  fnc_save.cpp
lib/device/: device.h  disk.h  fuji.h  modem.h  network.h  printer.h
lib/device/acsi/: disk.cpp  disk.h  fuji.cpp  fuji.h  modem.cpp  modem.h  network.cpp  network.h  printer.cpp  printerlist.cpp  printerlist.h
lib/device/atari16bit/: disk.cpp  disk.h  fuji.cpp  fuji.h  modem.cpp  modem.h  network.cpp  network.h  printer.cpp  printer.h  printerlist.h
lib/hardware/: fnSystem.cpp
lib/media/: media.h
lib/media/atari16bit/: mediaType.cpp  mediaType.h  mediaTypeIMG.cpp  mediaTypeIMG.h  mediaTypeMSA.cpp  mediaTypeMSA.h  mediaTypeST.cpp  mediaTypeST.h
lib/printer-emulator/: pdf_printer.cpp  printer_emulator.cpp
pico/atari16bit/: CMakeLists.txt  acsi.pio  acsi_cmd.pio  acsi_dma_in.pio  acsi_dma_out.pio  bootsector.h  dma_in.pio  dma_out.pio  main.c  pinmap.h  send_irq.pio  send_status.pio  wait_cmd.pio
pico/atari16bit/acsi_emulator/: CMakeLists.txt  main.c
pico/atari16bit/bitbang_pio/: CMakeLists.txt  acsi_cmd.pio  dma_in.pio  dma_out.pio  main.c  pinmap.h
src/: main.cpp
